--- a/.github/workflows/infra-tenants.yml
+++ b/.github/workflows/infra-tenants.yml
@@ -7,11 +7,11 @@ on:
   push:
     branches:
     - main
-    paths:
-    - infra/tenant
+    # paths:
+    # - infra/tenant
   pull_request:
-    paths:
-    - infra/tenant
+    # paths:
+    # - infra/tenant
 
 jobs:
   terraform:
@@ -28,39 +28,31 @@ jobs:
     defaults:
       run:
         shell: bash
+        working-directory: infra/tenant
 
+    permissions:
+      pull-requests: write
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+    - uses: hashicorp/setup-terraform@v3
 
-    - name: 'Terraform Format'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 1.9.8
-        tf_actions_subcommand: 'fmt'
-        tf_actions_working_dir: "./infra/tenant"
+    - name: Terraform fmt
+      id: fmt
+      run: terraform fmt -check
+      continue-on-error: false
 
-    - name: 'Terraform Init'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 1.9.8
-        tf_actions_subcommand: 'init'
-        tf_actions_working_dir: "./infra/tenant"
+    - name: Terraform Init
+      id: init
+      run: terraform init
 
-    - name: 'Terraform Validate'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 1.9.8
-        tf_actions_subcommand: 'validate'
-        tf_actions_working_dir: "./infra/tenant"
+    - name: Terraform Validate
+      id: validate
+      run: terraform validate -no-color
 
-    - name: 'Terraform Plan'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 1.9.8
-        tf_actions_subcommand: 'plan'
-        tf_actions_working_dir: "./infra/tenant"
+    - name: Terraform Plan
+      id: plan
+      run: terraform plan -no-color
+      continue-on-error: true
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main'
@@ -69,3 +61,40 @@ jobs:
         tf_actions_version: 1.9.8
         tf_actions_subcommand: 'apply'
         tf_actions_working_dir: "./infra/tenant"
+
+    - uses: actions/github-script@v7
+      if: github.event_name == 'pull_request'
+      env:
+        PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+          #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+          #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+          <details><summary>Validation Output</summary>
+
+          \`\`\`\n
+          ${{ steps.validate.outputs.stdout }}
+          \`\`\`
+
+          </details>
+
+          #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+
+          <details><summary>Show Plan</summary>
+
+          \`\`\`\n
+          ${process.env.PLAN}
+          \`\`\`
+
+          </details>
+
+          *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
+
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: output
+          })
