--- a/.github/workflows/infra-pr.yml
+++ b/.github/workflows/infra-pr.yml
@@ -4,11 +4,6 @@ on:
   workflow_dispatch:  
     branches:
     - main
-  push:
-    branches:
-    - main
-    # paths:
-    # - infra/tenant
   pull_request:
     # paths:
     # - infra/tenant
@@ -39,7 +34,7 @@ jobs:
     - name: Terraform fmt
       id: fmt
       run: terraform fmt -check
-      continue-on-error: false
+      continue-on-error: true
 
     - name: Terraform Init
       id: init
