--- a/.github/workflows/infra-merge-prod.yml
+++ b/.github/workflows/infra-merge-prod.yml
@@ -1,10 +1,10 @@
-name: 'Terraform Infrastructure Plan'
+name: 'Terraform Infrastructure Apply'
 
 on:
   workflow_dispatch:  
-  pull_request:
-    # paths:
-    # - infra/tenant
+  push:
+    branches:
+    - prod
 
 jobs:
   terraform:
@@ -21,7 +21,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: infra/tenant
+        working-directory: infra/environments/prod
 
     permissions:
       pull-requests: write
@@ -32,7 +32,7 @@ jobs:
     - name: Terraform fmt
       id: fmt
       run: terraform fmt -check
-      continue-on-error: true
+      continue-on-error: false
 
     - name: Terraform Init
       id: init
@@ -45,7 +45,7 @@ jobs:
     - name: Terraform Plan
       id: plan
       run: terraform plan -no-color
-      continue-on-error: true
+      continue-on-error: false
 
     - uses: actions/github-script@v7
       if: github.event_name == 'pull_request'
@@ -83,3 +83,7 @@ jobs:
             repo: context.repo.repo,
             body: output
           })
+
+    - name: Terraform Apply
+      id: apply
+      run: terraform apply -no-color -auto-approve
