--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,14 +3,13 @@
     "image": "mcr.microsoft.com/devcontainers/universal:2",  // Use a Microsoft-provided universal base image
     "features": {
         "azure-cli": "latest",
-        "terraform": "latest",
+        "bicep": "latest",
         "powershell": "latest"
     },
     "customizations": {
         "vscode": {
             "extensions": [
                 "ms-azuretools.vscode-azurecli",      // Azure CLI
-                "hashicorp.terraform",                // Terraform extension
                 "ms-vscode.powershell",               // PowerShell extension
                 "GitHub.copilot-chat"                 // GitHub Copilot
             ]
