--- a/.github/workflows/infra-merge.yml
+++ b/.github/workflows/infra-merge.yml
@@ -1,4 +1,4 @@
-name: 'Terraform Infrastructure Apply'
+name: 'Bicep Infrastructure Apply'
 
 on:
   workflow_dispatch:  
@@ -9,8 +9,8 @@ on:
     - main
 
 jobs:
-  terraform:
-    name: 'Terraform'
+  bicep:
+    name: 'Bicep'
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
@@ -29,63 +29,13 @@ jobs:
       pull-requests: write
     steps:
     - uses: actions/checkout@v4
-    - uses: hashicorp/setup-terraform@v3
+    - name: Set up Bicep
+      run: az bicep install
 
-    - name: Terraform fmt
-      id: fmt
-      run: terraform fmt -check
-      continue-on-error: false
+    - name: Bicep Build
+      id: build
+      run: az bicep build --file main.bicep
 
-    - name: Terraform Init
-      id: init
-      run: terraform init
-
-    - name: Terraform Validate
-      id: validate
-      run: terraform validate -no-color
-
-    - name: Terraform Plan
-      id: plan
-      run: terraform plan -no-color
-      continue-on-error: false
-
-    - uses: actions/github-script@v7
-      if: github.event_name == 'pull_request'
-      env:
-        PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-          #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-          #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
-          <details><summary>Validation Output</summary>
-
-          \`\`\`\n
-          ${{ steps.validate.outputs.stdout }}
-          \`\`\`
-
-          </details>
-
-          #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-
-          <details><summary>Show Plan</summary>
-
-          \`\`\`\n
-          ${process.env.PLAN}
-          \`\`\`
-
-          </details>
-
-          *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
-
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: output
-          })
-
-    - name: Terraform Apply
-      id: apply
-      run: terraform apply -no-color -auto-approve
+    - name: Bicep Deploy
+      id: deploy
+      run: az deployment group create --resource-group crgar-aca-dev-tenant-rg --template-file main.json --parameters @parameters.json
